Update image alts

--- a/beat/index.html
+++ b/beat/index.html
@@ -111,7 +111,7 @@
                     I wanted to design something without changing the current design drastically so we could have a faster time to market. So I came up with these iterations for showing the pickup address on the map.
                 </p>
                 <div class="work-image">
-                    <img src="../assets/beat/3-exploration.png" id="problem" alt="Beat Chart" />
+                    <img src="../assets/beat/3-exploration.png" id="problem" alt="Beat Exploration" />
                 </div>
             </article>
         </div>
@@ -134,7 +134,7 @@
                     After analyzing the results of the test, I concluded that we might be able to grab passengers’ attention if we show something new, bold, and different on the map. As a result, I began iterating on a new design.
                 </p>
                 <div class="work-image">
-                    <img src="../assets/beat/4-reiteration.png" id="problem" alt="Beat Chart" />
+                    <img src="../assets/beat/4-reiteration.png" id="problem" alt="Beat Reiteration" />
                 </div>
             </article>
         </div>
@@ -148,7 +148,7 @@
                     The new pickup pin was well received after the second round of usability tests. Seven out of nine people were able to understand and use it and they actually loved the icons we showed on the pin, they said it made it clearer if you’re at home and assures you have the right pickup.
                 </p>
                 <div class="work-image">
-                    <img src="../assets/beat/5-designs.png" id="problem" alt="Beat Chart" />
+                    <img src="../assets/beat/5-designs.png" id="problem" alt="Beat Design" />
                 </div>
             </article>
         </div>
@@ -162,7 +162,7 @@
                     As a first touchpoint, we have the pickup pin on the map. Another option is to tap on the search field for destination, then tap on the pickup field to either write and search your address or select it on the map.
                 </p>
                 <div class="work-image">
-                    <img src="../assets/beat/6-flow.png" id="problem" alt="Beat Chart" />
+                    <img src="../assets/beat/6-flow.png" id="problem" alt="Beat Flow" />
                 </div>
             </article>
         </div>
@@ -185,7 +185,7 @@
                     Another improvement would be to allow passengers to alter their pickup address on the Request screen instead of canceling the entire request when an incorrect pickup occurs.
                 </p>
                 <div class="work-image">
-                    <img src="../assets/beat/7-whats-next.png" id="problem" alt="Beat Chart" />
+                    <img src="../assets/beat/7-whats-next.png" id="problem" alt="Beat What’s Next" />
                 </div>
             </article>
         </div>
