Update Beat layout

--- a/about/index.html
+++ b/about/index.html
@@ -42,7 +42,7 @@
                 </p>
                 <br/>
                 <p>
-                    It's always been my goal to learn new skills and expand my horizons. I love to work alongside hard-working, inspirational, and experienced designers in the industry. For me, as a person and designer, that is one of the most effective ways to learn and grow.
+                    It's always been my goal to learn new skills and expand my horizons. I love to work alongside hard-working, inspirational, and experienced people in the industry. For me, as a person and designer, that is one of the most effective ways to learn and grow.
                 </p>
                 <br/>
                 <p>
