--- a/beat/index.html
+++ b/beat/index.html
@@ -39,9 +39,8 @@
         </div>
     </nav>
 
-
     <main>
-        <article class="work-article padding-bottom-40">
+        <article class="work-article padding-bottom-0">
             <h2>Introduction</h2>
             <p class="work-text">
                 Beat was a ride hailing service focused on LatAm markets. It had more than 25 million users across 5 countries. I was one of the designers working on the passenger's experience.                
@@ -52,10 +51,11 @@
                 <br/>
                 Well that was not the case with Beat! The pickup location was mostly incorrect because of GPS’s low accuracy in urban landscapes and our users have also complained about it several times in previous user researches. Therefore, it was vital to improve the experience when passengers choose their route. We have to ensure they’re gonna be picked up at the right spot and that drivers won’t have to waste time calling them or driving around the block to pick them up.
             </p>
-            <div class="work-image">
-                <img src="../assets/beat/1-intro.png" id="problem" alt="Beat Intro" />
-            </div>
+            
         </article>
+        <div class="work-image-w850">
+            <img src="../assets/beat/1-intro.png" alt="Beat Intro" />
+        </div>
         <div class="back-gray">
             <article class="work-article">
                 <h2>My Role</h2>
@@ -77,20 +77,19 @@
                     <br/></br/>
                     Our data revealed that:
                 </p>
-                <!-- <br/> -->
                 <ul>
                     <li><strong>30% of users change their pickup after cancelling a request.</strong>
                     </li>
-                    <!-- <br/> -->
                     <li><strong>20% of passengers that land on the Trip Confirmation screen change their pick up address.</strong>
                     </li>
                 </ul>
-                <div class="work-image">
-                    <img src="../assets/beat/2-chart.png" id="problem" alt="Beat Chart" />
-                </div>
+                
             </article>
+            <div class="work-image-small">
+                <img src="../assets/beat/2-chart.png" alt="Beat Chart" />
+            </div>
         </div>
-        <div class="back-gray padding-bottom-0">
+        <div class="back-gray padding-bottom-40">
             <article class="work-article">
                 <h2>Ideation</h2>
                 <p class="work-text-normal">
@@ -101,7 +100,7 @@
             </article>
         </div>
 
-        <div class="back-white padding-bottom-0">
+        <div class="back-white padding-bottom-40">
             <article class="work-article">
                 <h2>Exploration</h2>
                 <p class="work-text">
@@ -110,13 +109,13 @@
                     <br/>
                     I wanted to design something without changing the current design drastically so we could have a faster time to market. So I came up with these iterations for showing the pickup address on the map.
                 </p>
-                <div class="work-image">
-                    <img src="../assets/beat/3-exploration.png" id="problem" alt="Beat Exploration" />
-                </div>
             </article>
+            <div class="work-image-w850">
+                <img src="../assets/beat/3-exploration.png" alt="Beat Exploration" />
+            </div>
         </div>
 
-        <div class="back-gray padding-bottom-0">
+        <div class="back-gray padding-bottom-40">
             <article class="work-article">
                 <h2>Research</h2>
                 <p class="work-text-normal">
@@ -127,14 +126,14 @@
             </article>
         </div>
 
-        <div class="back-white padding-bottom-0">
+        <div class="back-white padding-bottom-40">
             <article class="work-article">
                 <h2>Reiteration</h2>
                 <p class="work-text">
                     After analyzing the results of the test, I concluded that we might be able to grab passengers’ attention if we show something new, bold, and different on the map. As a result, I began iterating on a new design.
                 </p>
-                <div class="work-image">
-                    <img src="../assets/beat/4-reiteration.png" id="problem" alt="Beat Reiteration" />
+                <div class="work-image-w850">
+                    <img src="../assets/beat/4-reiteration.png" alt="Beat Reiteration" />
                 </div>
             </article>
         </div>
@@ -147,8 +146,8 @@
                     <br/></br/>
                     The new pickup pin was well received after the second round of usability tests. Seven out of nine people were able to understand and use it and they actually loved the icons we showed on the pin, they said it made it clearer if you’re at home and assures you have the right pickup.
                 </p>
-                <div class="work-image">
-                    <img src="../assets/beat/5-designs.png" id="problem" alt="Beat Design" />
+                <div class="work-image-w850 margin-top-0">
+                    <img src="../assets/beat/5-designs.png" alt="Beat Design" />
                 </div>
             </article>
         </div>
@@ -162,12 +161,12 @@
                     As a first touchpoint, we have the pickup pin on the map. Another option is to tap on the search field for destination, then tap on the pickup field to either write and search your address or select it on the map.
                 </p>
                 <div class="work-image">
-                    <img src="../assets/beat/6-flow.png" id="problem" alt="Beat Flow" />
+                    <img src="../assets/beat/6-flow.png" alt="Beat Flow" />
                 </div>
             </article>
         </div>
 
-        <div class="back-gray padding-bottom-0">
+        <div class="back-gray padding-bottom-40">
             <article class="work-article">
                 <h2>Results</h2>
                 <p class="work-text-normal">
@@ -177,15 +176,15 @@
         </div>
 
         <div class="back-white padding-bottom-49">
-            <article class="work-article last-work-article">
+            <article class="work-article">
                 <h2>What’s Next</h2>
                 <p class="work-text">
                     The time to change pickup <strong>increased by 10%</strong>, which is not good and it was due to opening the Choose on Map screen. To decrease the number we wanted to try to open the Search screen with the addresses list instead.
                     <br/><br/>
                     Another improvement would be to allow passengers to alter their pickup address on the Request screen instead of canceling the entire request when an incorrect pickup occurs.
                 </p>
-                <div class="work-image">
-                    <img src="../assets/beat/7-whats-next.png" id="problem" alt="Beat What’s Next" />
+                <div class="work-image-w850 margin-top-0">
+                    <img src="../assets/beat/7-whats-next.png" alt="Beat What’s Next" />
                 </div>
             </article>
         </div>
