--- a/beat/index.html
+++ b/beat/index.html
@@ -46,7 +46,7 @@
                 Beat was a ride hailing service focused on LatAm markets. It had more than 25 million users across 5 countries. I was one of the designers working on the passenger's experience.                
                 <br/>
                 <br/>
-                When you open a ride-hailing app, you are trusting the service to get your pick location correctly. You don't want to think too much about it. The only thing you want to do is select your destination and get a ride.
+                When you open a ride-hailing app, you are trusting the service to get your pickup location correctly. You don't want to think too much about it. The only thing you want to do is select your destination and get a ride.
                 <br/>
                 <br/>
                 Well that was not the case with Beat! The pickup location was mostly incorrect because of GPS’s low accuracy in urban landscapes and our users have also complained about it several times in previous user researches. Therefore, it was vital to improve the experience when passengers choose their route. We have to ensure they’re gonna be picked up at the right spot and that drivers won’t have to waste time calling them or driving around the block to pick them up.
