Update resume, footer top margin, add external links to beat and video

--- a/beat/index.html
+++ b/beat/index.html
@@ -189,6 +189,19 @@
             </article>
         </div>
 
+        <div class="back-gray padding-bottom-49">
+            <article class="work-article">
+                <h2>Other Projects</h2>
+                <p class="work-text">
+                    Would you like to see more of my work in Beat? These links will take you to a few of them:
+                    <br/><br/>
+                    A few screens of the Favorite Address feature <a href="https://dribbble.com/shots/20026793-Beat-Saved-Places" target="_blank">link</a>
+                    <br/><br/>
+                    Some of the illustrations I made for Beat <a href="https://dribbble.com/shots/20026801-New-Illustrations-for-Beat" target="_blank">link</a>
+                </p>
+            </article>
+        </div>
+
         <div class="pagination">
             <div class="pagination-content">
                 <a class="prev-page" href="../chat/">
