--- a/video/index.html
+++ b/video/index.html
@@ -178,6 +178,23 @@
             </article>
         </div>
 
+        <div class="back-gray padding-bottom-40">
+            <article class="work-article">
+                <h2>Other Projects</h2>
+                <p class="work-text-normal">
+                    Would you like to see more of my work in Bazaar? These links will take you to a few of my projects:
+                    <br/><br/>
+                    Bazaar's Video Discovery redesign <a href="https://www.behance.net/gallery/121620745/Bazaars-Video-Discovery-Redesign" target="_blank">link</a>
+                    <br/><br/>
+                    Bazaar's Video Detail redesign <a href="https://www.behance.net/gallery/128135477/Video-Detail-Redesign-in-Bazaar-Application" target="_blank">link</a>
+                    <br/><br/>
+                    Bazaar’s web application redesigning <a href="https://dribbble.com/shots/16807585-Download-Bazaar-Web-Page" target="_blank">link 1</a> <a href="https://dribbble.com/shots/20026137-Sign-Up-on-Bazaar-Web-Page" target="_blank">link 2</a>
+                    <br/><br/>
+                    A note taking app for the THA in the hiring process of Bazaar’s Android Team <a href="https://dribbble.com/shots/15765369-Note-Taking-App" target="_blank">link</a>
+                </p>
+            </article>
+        </div>
+
         <div class="pagination">
             <div class="pagination-content">
                 <a class="prev-page" href="../beat/">
